<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddCityActivity">

    <LinearLayout
        android:id="@+id/details"
        android:layout_width="409dp"
        android:layout_height="601dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="match_parent"
            android:layout_height="58dp" />

        <EditText
            android:id="@+id/cityNameToAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="City Name"
            />

        <Button
            android:id="@+id/addCityButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add City" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>