<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/usernameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Username: "
            android:paddingTop="8dp"
            android:paddingBottom="8dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="CS427 Project App" />

        <TextView
            android:id="@+id/cityListTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="List of Cities" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!--<LinearLayout
            android:id="@+id/cityButtonContainer"
            android:layout_width="match_parent"
            android:layout_height="729dp"
            android:orientation="horizontal">
        </LinearLayout>
        -->

        <GridLayout
            android:id="@+id/cityButtonContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="3">
        </GridLayout>


        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="156dp" />

        <Button
            android:id="@+id/buttonAddLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add a location" />

        <Button
            android:id="@+id/buttonRemoveLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Remove a location" />
            
        <Button
            android:id="@+id/buttonLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Logout"
            />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>