<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Username"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Password"
        android:inputType="textPassword"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Login"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/signUpEmailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/signUpUsernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Username"
        android:inputType="textEmailAddress"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/signUpPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Password"
        android:inputType="textPassword"
        android:layout_marginTop="16dp" />
    <TextView
        android:id="@+id/Theme_Tag"
        android:layout_width="69dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Theme"
        android:textSize="20sp" />


    <Spinner
        android:id="@+id/Theme_Spinner"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginTop="16dp"
        android:spinnerMode="dropdown"
        android:entries="@array/theme_color"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Dark_Mode"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Dark Mode"
            android:textSize="20sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/Dark_Mode_Switch"
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:textIsSelectable="true"
            android:textOff="OFF"
            android:textOn="ON"
            android:textSize="12sp"
            app:showText="true"
            app:thumbTextPadding="5dp"
            android:theme="@style/Theme.AppCompat"
            android:thumbTint="#BDB8B8"
            android:trackTint="#2196F3" />

    </LinearLayout>

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sign Up"
        android:layout_marginTop="16dp" />

</LinearLayout>
